--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <li class="dropdown">
       <a href="javascript:void(0)" class="dropbtn">Projects</a>
       <div class="dropdown-content"> 
+	  <a href="projects/abalone.html">Abalone population</a>
           <a href="projects/amazon.html">Amazon river</a>
           <a href="projects/gcm_do.html">GCM + DO dynamics</a>
           <a href="projects/kelp_forest.html">kelp forest</a>
