--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Matheus Fagundes</title> <!-- Change the name of the tab -->
+<title>Yargo Teixeira Gomes de Melo</title> <!-- Change the name of the tab -->
 
 </head>
 <body>
   
 <!-- Header! -->
 <div class="header">
-  <h1>Matheus Fagundes</h1>
+  <h1>Yargo Teixeira Gomes de Melo</h1>
 </div>
   
     <!-- navigation bar commands -->
@@ -23,8 +23,8 @@
   <li class="dropdown">
       <a href="javascript:void(0)" class="dropbtn">Projects</a>
       <div class="dropdown-content"> 
-	  <a href="projects/abalone.html">Abalone population</a>
-          <a href="projects/amazon.html">Amazon river</a>
+	  <a href="projects/abalone.html">Langmuir Supercells</a>
+          <a href="projects/amazon.html">Vibration of cylinder near wall</a>
           <a href="projects/gcm_do.html">GCM + DO dynamics</a>
           <a href="projects/kelp_forest.html">kelp forest</a>
       </div>
@@ -42,33 +42,33 @@
   
   <div class="column">
 	<h2>About me</h2>
-    <p>Hi, I'm <span itemprop="name">Matheus Fagundes</span> and I'm a PhD candidate working under the supervision of <a href="https://www.cobia.engr.uga.edu/">Dr. Woodson</a> at <span itemprop="affiliation">the <a href="https://engineering.uga.edu/">University of Georgia</a></span>.</p>
-	<p><font face="Avenir">My Phd dissertation lies at the intersaction of nearshore dynamics and turbulence due to vegetation and how 
-		               these interactions affect larvae dispersal and nutrients. </font></p> 
+    <p>Hi, I'm <span itemprop="name">Yargo Teixeira Gomes de Melo</span> and I'm a PhD candidate working under the supervision of <a href="https://www.cobia.engr.uga.edu/">Dr. Woodson</a> at <span itemprop="affiliation">the <a href="https://engineering.uga.edu/">University of Georgia</a></span>.</p>
+	<p><font face="Avenir">My dissertaion is on Langmuir Supercells, an important mechanism of resuspension and transport of sediments 
+		               in the coastal ocean, which may greatly affect the local benthic ecosystem. </font></p> 
 	                       <!--In order to achieve that I modified 
 		               COAWST (A Coupled-Ocean-Atmosphere-Wave-Sediment Transport Modeling System) 
 		 to simulate My main project during my PhD is to couple kelp forest module in the water column of the Regional Ocean Modeling System (ROMS) 
 		  and understand the impact in the population dynamics and oxygen dynamics.-->
   
-	<p><font face="Avenir">My interests range from high-resolution idealized modeling to Global Climate modeling and more recently ML/AI.</p>
+	<p><font face="Avenir">My interests are in fludi dynamics ranging from physical oceanography to flow-body interactions, and more recently high-resolution idealized modeling to global climate and ocean modeling.</p>
 
     <h2>Contact Me</h2>
 
-    <p>email: mf99274@uga.edu</p>
+    <p>email: yargo@uga.edu</p>
 
-    <a href="https://www.linkedin.com/in/matheus-fagundes-05429a213/">
+    <a href="https://www.linkedin.com/in/yargo-teixeira-gomes-de-melo-05280a235/">
       <i class="fa fa-linkedin-square" style="font-size:36px"></i>
 	</a>
 
-    <a href="https://github.com/mf99274">
+    <a href="https://github.com/yargotkd">
       <i class="fa fa-github" style="font-size:36px"></i>
     </a>
 
-    <a href="https://scholar.google.com/citations?user=ipWgJPwAAAAJ&hl=en">
+    <a href="https://scholar.google.com/citations?user=QDs_6W4AAAAJ&hl=en">
      <i class="material-icons" style="font-size:36px">school</i>
     </a> 
 	
-	<a href="https://twitter.com/Matheus06573966">
+	<a href="https://twitter.com/Yargotkd">
     <i class="fa fa-twitter" style="font-size:36px"></i>
 	</a>
 
