--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		 to simulate My main project during my PhD is to couple kelp forest module in the water column of the Regional Ocean Modeling System (ROMS) 
 		  and understand the impact in the population dynamics and oxygen dynamics.-->
   
-	<p><font face="Avenir">My interests are in fludi dynamics ranging from physical oceanography to flow-body interactions, and more recently high-resolution idealized modeling to global climate and ocean modeling.</p>
+	<p><font face="Avenir">My interests are in fluid dynamics ranging from physical oceanography to fluid-body interactions, and more recently high-resolution idealized modeling to global climate and ocean modeling.</p>
 
     <h2>Contact Me</h2>
 
