--- a/projects/abalone.html
+++ b/projects/abalone.html
@@ -17,10 +17,8 @@
   <li class="dropdown">
       <a href="javascript:void(0)" class="dropbtn">Projects</a>
       <div class="dropdown-content"> 
-          <a href="abalone.html">Abalone population</a>
-          <a href="amazon.html">Amazon river</a>
-          <a href="gcm_do.html">GCM + DO dynamics</a>
-          <a href="kelp_forest.html">kelp forest</a>
+          <a href="abalone.html">Langmuir Supercells</a>
+
       </div>
   </li>
   <li><a href="../cv/index.html">CV</a></li>
