--- a/projects/abalone.html
+++ b/projects/abalone.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Matheus Fagundes</title> <!-- Change the name of the tab -->
+<title>Yargo Teixeira Gomes de Melo</title> <!-- Change the name of the tab -->
 </head>
 <body>
 
